# MandelbrotQt

./: CMakeLists.txt  README.md  image_info.cpp  image_info.h  image_package.cpp  image_package.h  mainwindow.cpp  mainwindow.h  mandelbrot.cpp  mandelbrot.h  position_asker.cpp  position_asker.h  renderer.cpp  renderer.h
